[package]
name = "nginx-log-to-prometheus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
tokio = { version = "1", features=["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
serde = "1"
eyre = "0"
prometheus = "0.13"
syslog_loose = "0.18.0"
chrono = "0"

[[bin]]
name = "nginx-log-to-prometheus"
path = "bin/nginx_log_to_prometheus.rs"